- Bugfix: Minimized CDockables did not appear at the correct location if corner components were used
- Bugfix: Dragging a maximized CDockable could throw an exception
- Bugfix: Dragging a tab from a BasicStackDockComponent could throw an exception
- Bugfix: Path did not encode non-java identifiers right.
- API: EclipseDockableDisplayer now also respects TabContentFilter
! API: TabContentFilter has additional methods dealing with StackDockComponents. StackDockStationFilterListener renamed to TabContentFilter.
- Bugfix: EclipseMenu did not update its icon automatically
- Bugfix: StackDockStation.move(Dockable,DockableProperty) could throw exception if destination index was too big
- Bugfix: AbstractScreenDockWindow.setDockable did call updateTitleIcon instead of updateTitleText
- Bugfix: DockTitleTab caused exception when uninstalled
- Bugfix: Instead of doing nothing, PropertyPreferences now load their default value if they cannot read any other value
- Bugfix: When deploying a CGrid some Dockables did not appear: the tree of the SplitDockStation was cleaned up too early before all Dockables had been inserted, leading to a corrupted tree
- Bugfix: SplitDockStation did assign leaf-id to node when using drop(SplitDockPathProperty). As a result unmaximizing a stack of CDockables could destroy the stack.
- Bugfix: SplitDockStation does now always update the boundaries of its tree before dropping a dockable. Wrong boundaries did lead to Dockables dropped at the wrong location even if the used DockableProperty was correct.
- Bugfix: Path now encodes its content when using "toString" and decodes contents on creation. Meaning inside a Path object the items are never encoded.
- Bugfix: MouseFocusObserver no longer calls "component.requestFocusInWindow" if the component does not belong to a Dockable
- Bugfix: SplitDockStation is now much more strict when it comes to enforcing the uniqueness of placeholders